Fix up example app