@@ -28,7 +28,6 @@
                     <compilerArgs>
                         <arg>--enable-preview</arg>
                         <arg>-parameters</arg>
-                        <arg>--add-modules jdk.incubator.concurrent</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -97,7 +96,7 @@
         <dependency>
             <groupId>com.lokalized</groupId>
             <artifactId>lokalized-java</artifactId>
-            <version>1.0.1</version>
+            <version>1.0.2</version>
         </dependency>
 
         <!-- SLF4J for logging -->
